// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      label="Button"
      type="button"
    >
      Children coming from story args!
    </button>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithLocale story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      Hello!
    </button>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      label="Button"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Renders CSF3Button story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      label="Button"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <div>
      <p
        data-testid="custom-render"
      >
        I am a custom render function
      </p>
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        label="Button"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <input />
  </div>
</body>
`;

exports[`Renders CSF3Primary story 1`] = `
<body>
  <div>
    <div>
      Locale: 
      en
    </div>
    <button
      class="storybook-button storybook-button--large storybook-button--primary"
      label="Button"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;
